PIVOT-1039:  Fix the deprecation warnings from "new Float", "new Long" and so forth.
git-svn-id: https://svn.apache.org/repos/asf/pivot/trunk@1840311 13f79535-47bb-0310-9956-ffa450edef68