@@ -77,7 +77,7 @@ public class LinkButtonDataRenderer extends TablePane implements Button.DataRend
             imageView.setVisible(true);
             imageView.setImage(icon);
 
-            imageView.getStyles().put(Style.opacity, button.isEnabled() ? new Float(1.0f) : new Float(0.5f));
+            imageView.getStyles().put(Style.opacity, Float.valueOf(button.isEnabled() ? 1.0f : 0.5f));
         }
 
         // Update the label
